[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "test_app"
version = "0.1.0"
authors = [
  { name="Hari", email="test.com" },
]
description = "A simple streamlit app to explore streamlit deployment"
dependencies = ["streamlit"]
requires-python = ">=3.10"
